--- a/src/components/EstilosPaginas/Rodape.module.css
+++ b/src/components/EstilosPaginas/Rodape.module.css
@@ -1,4 +1,4 @@
-.navBar{
+.footer{
   color: #000000;
   display: flex;
   align-items: center;
@@ -7,7 +7,5 @@
   flex-wrap: nowrap;
   flex-direction: row;
   background-color: bisque;
-}
-.logo{
-  width: 50px;
+  padding: 15px;
 }
