--- a/src/components/EstilosPaginas/Cabecalho.module.css
+++ b/src/components/EstilosPaginas/Cabecalho.module.css
@@ -1,14 +1,12 @@
 .navBar{
-  color: #000000;
   display: flex;
-  align-items: center;
   justify-content: space-between;
-  height: 8vh;
   flex-wrap: nowrap;
+  align-items: center;
   flex-direction: row;
-  background-color: bisque;
-  padding: 15px;
-}
-.logo{
-  width: 50px;
+  padding: 1rem 15rem 1rem 15rem;
+  gap: 6rem;
+  border-bottom: 1px solid;
+  background-color: #19335a;
+  color: #fff;
 }
